<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="notification_channel_id" translatable="false">download_channel</string>
    <string name="notification_channel_name">LoadApps</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_radio_button">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_radio_button">LoadApp - Current Repository by Udacity</string>
    <string name="retrofit_radio_button">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    
    <string name="download">Download</string>
    <string name="snooze_button_description">Check the status</string>
    <string name="warning_none_selected">Please select the file to download</string>

    <string name="download_info_intent_name">downloadInfo</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>

    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="custom_download_link">Custom Link - https://www.example.com</string>
</resources>
